# DevAgent24

./: .env.example  next.config.ts  package-lock.json  package.json  push_all.ps1  supabase-schema.sql
contracts/devagent-cert/: Anchor.toml
contracts/devagent-cert/programs/devagent-cert/: Cargo.toml
contracts/devagent-cert/programs/devagent-cert/src/: lib.rs
scripts/: solana-setup.ts
src/: middleware.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/actions/: auth.ts
src/app/api/execute-code/: route.ts
src/app/api/interview/: route.ts
src/app/api/issue-cert/: route.ts
src/app/api/mentor/: route.ts
src/app/api/travel/: route.ts
src/app/auth/callback/: route.ts
src/app/dashboard/: layout-client.tsx  layout.tsx  page.tsx
src/app/dashboard/certificates/: page.tsx
src/app/dashboard/challenges/: page.tsx
src/app/dashboard/challenges/[id]/: page.tsx
src/app/dashboard/interview/: page.tsx
src/app/dashboard/travel/: page.tsx
src/app/verify/[hash]/: page.tsx
src/lib/: challenges-data.ts  groq.ts  n8n-client.ts  resend.ts  supabase.ts
src/lib/__tests__/: groq.test.ts
src/lib/blockchain/: solana-client.ts
src/lib/execution/: judge0-client.ts  pyodide-runner.ts
src/lib/supabase/: middleware.ts  server.ts
src/test/: smoke.test.ts
src/types/: index.ts
